[package]
name = "rust_gd_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.85" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
cobhan = { version = "0.1.0" }

[lib]
name = "rust_gd_auth"
crate-type = ["rlib", "cdylib"]